; ModuleID = '/home/carl/AnghaBench/mongoose/test/extr_unit_test.c_handle_hello5.c'
source_filename = "/home/carl/AnghaBench/mongoose/test/extr_unit_test.c_handle_hello5.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mg_connection = type { %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i64 }

@.str = private unnamed_addr constant [38 x i8] c"HTTP/1.0 200 OK\0D\0A\0D\0A[I am Hello again]\00", align 1
@MG_F_SEND_AND_CLOSE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [19 x i8] c"%p == hello5 close\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mg_connection*, i32, i8*)* @handle_hello5 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @handle_hello5(%struct.mg_connection* %0, i32 %1, i8* %2) #0 {
  %4 = alloca %struct.mg_connection*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  store %struct.mg_connection* %0, %struct.mg_connection** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %7 = load i8*, i8** %6, align 8
  %8 = load i32, i32* %5, align 4
  switch i32 %8, label %29 [
    i32 128, label %9
    i32 129, label %17
  ]

9:                                                ; preds = %3
  %10 = load %struct.mg_connection*, %struct.mg_connection** %4, align 8
  %11 = call i32 @mg_printf(%struct.mg_connection* %10, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0))
  %12 = load i32, i32* @MG_F_SEND_AND_CLOSE, align 4
  %13 = load %struct.mg_connection*, %struct.mg_connection** %4, align 8
  %14 = getelementptr inbounds %struct.mg_connection, %struct.mg_connection* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 8
  %16 = or i32 %15, %12
  store i32 %16, i32* %14, align 8
  br label %29

17:                                               ; preds = %3
  %18 = load %struct.mg_connection*, %struct.mg_connection** %4, align 8
  %19 = bitcast %struct.mg_connection* %18 to i8*
  %20 = call i32 @DBG(i8* %19)
  %21 = load %struct.mg_connection*, %struct.mg_connection** %4, align 8
  %22 = getelementptr inbounds %struct.mg_connection, %struct.mg_connection* %21, i32 0, i32 0
  %23 = load %struct.TYPE_2__*, %struct.TYPE_2__** %22, align 8
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = inttoptr i64 %25 to i32*
  %27 = load i32, i32* %26, align 4
  %28 = add nsw i32 %27, 1000
  store i32 %28, i32* %26, align 4
  br label %29

29:                                               ; preds = %3, %17, %9
  ret void
}

declare dso_local i32 @mg_printf(%struct.mg_connection*, i8*) #1

declare dso_local i32 @DBG(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
